commit bilingual contents

--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivottablestylecollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivottablestylecollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.PivotTableStyleCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="f3ddf-101">一个用于更新 PivotTableStyleCollection 对象上的数据的接口，可用于`pivotTableStyleCollection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="f3ddf-101">An interface for updating data on the PivotTableStyleCollection object, for use in `pivotTableStyleCollection.set({ ... })`</span></span><!-- --><span data-ttu-id="f3ddf-102">.</span><span class="sxs-lookup"><span data-stu-id="f3ddf-102"></span></span>'
+    summary: '一个用于更新 PivotTableStyleCollection 对象上的数据的接口，可用于`pivotTableStyleCollection.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.PivotTableStyleCollectionUpdateData
     fullName: Excel.Interfaces.PivotTableStyleCollectionUpdateData
     langs:
