--- a/docs/docs-ref-autogen/word_1_3/word/word.alignment.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.alignment.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.Alignment:enum'
-    summary: '<span data-ttu-id="8f802-101">\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8f802-101">\[ [API set: WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]'
     name: Word.Alignment
     fullName: Word.Alignment
     langs:
@@ -16,7 +16,7 @@ items:
       - 'word!Word.Alignment.right:member'
       - 'word!Word.Alignment.unknown:member'
   - uid: 'word!Word.Alignment.centered:member'
-    summary: <span data-ttu-id="8f802-102">居中对齐。</span><span class="sxs-lookup"><span data-stu-id="8f802-102">Alignment to the center.</span></span>
+    summary: 居中对齐。
     name: centered
     fullName: centered
     langs:
@@ -24,7 +24,7 @@ items:
     type: field
     numericValue: '"Centered"'
   - uid: 'word!Word.Alignment.justified:member'
-    summary: <span data-ttu-id="8f802-103">完全两端对齐。</span><span class="sxs-lookup"><span data-stu-id="8f802-103">Fully justified alignment.</span></span>
+    summary: 完全两端对齐。
     name: justified
     fullName: justified
     langs:
@@ -32,7 +32,7 @@ items:
     type: field
     numericValue: '"Justified"'
   - uid: 'word!Word.Alignment.left:member'
-    summary: <span data-ttu-id="8f802-104">左对齐。</span><span class="sxs-lookup"><span data-stu-id="8f802-104">Alignment to the left.</span></span>
+    summary: 左对齐。
     name: left
     fullName: left
     langs:
@@ -47,7 +47,7 @@ items:
     type: field
     numericValue: '"Mixed"'
   - uid: 'word!Word.Alignment.right:member'
-    summary: <span data-ttu-id="8f802-105">向右对齐。</span><span class="sxs-lookup"><span data-stu-id="8f802-105">Alignment to the right.</span></span>
+    summary: 向右对齐。
     name: right
     fullName: right
     langs:
@@ -55,7 +55,7 @@ items:
     type: field
     numericValue: '"Right"'
   - uid: 'word!Word.Alignment.unknown:member'
-    summary: <span data-ttu-id="8f802-106">未知对齐方式。</span><span class="sxs-lookup"><span data-stu-id="8f802-106">Unknown alignment.</span></span>
+    summary: 未知对齐方式。
     name: unknown
     fullName: unknown
     langs:
