--- a/docs/docs-ref-autogen/word_1_3/word/word.bordertype.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.bordertype.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.BorderType:enum'
-    summary: '<span data-ttu-id="dd95c-101">\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dd95c-101">\[ [API set: WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]'
     name: Word.BorderType
     fullName: Word.BorderType
     langs:
