--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivotfieldupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivotfieldupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.PivotFieldUpdateData:interface'
-    summary: '<span data-ttu-id="c5671-101">一个用于更新透视字段对象上的数据的接口，可用于`pivotField.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="c5671-101">An interface for updating data on the PivotField object, for use in `pivotField.set({ ... })`</span></span><!-- --><span data-ttu-id="c5671-102">.</span><span class="sxs-lookup"><span data-stu-id="c5671-102"></span></span>'
+    summary: '一个用于更新透视字段对象上的数据的接口，可用于`pivotField.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.PivotFieldUpdateData
     fullName: Excel.Interfaces.PivotFieldUpdateData
     langs:
@@ -14,9 +14,9 @@ items:
       - 'excel!Excel.Interfaces.PivotFieldUpdateData#subtotals:member'
   - uid: 'excel!Excel.Interfaces.PivotFieldUpdateData#name:member'
     summary: |-
-      <span data-ttu-id="c5671-103">PivotField 的名称。</span><span class="sxs-lookup"><span data-stu-id="c5671-103">Name of the PivotField.</span></span>
+      PivotField 的名称。
 
-      <span data-ttu-id="c5671-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c5671-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -29,9 +29,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.PivotFieldUpdateData#showAllItems:member'
     summary: |-
-      <span data-ttu-id="c5671-105">确定是否显示 PivotField 的所有项。</span><span class="sxs-lookup"><span data-stu-id="c5671-105">Determines whether to show all items of the PivotField.</span></span>
+      确定是否显示 PivotField 的所有项。
 
-      <span data-ttu-id="c5671-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c5671-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showAllItems
     fullName: showAllItems
     langs:
@@ -44,9 +44,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotFieldUpdateData#subtotals:member'
     summary: |-
-      <span data-ttu-id="c5671-107">PivotField 小计。</span><span class="sxs-lookup"><span data-stu-id="c5671-107">Subtotals of the PivotField.</span></span>
+      PivotField 小计。
 
-      <span data-ttu-id="c5671-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c5671-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: subtotals
     fullName: subtotals
     langs:
