--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivottablestylecollectiondata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivottablestylecollectiondata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.PivotTableStyleCollectionData:interface'
-    summary: <span data-ttu-id="3748b-101">描述通过调用返回的数据的接口`pivotTableStyleCollection.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="3748b-101">An interface describing the data returned by calling `pivotTableStyleCollection.toJSON()`</span></span><!-- --><span data-ttu-id="3748b-102">.</span><span class="sxs-lookup"><span data-stu-id="3748b-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`pivotTableStyleCollection.toJSON()`<!-- -->.
     name: Excel.Interfaces.PivotTableStyleCollectionData
     fullName: Excel.Interfaces.PivotTableStyleCollectionData
     langs:
