--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.worksheetupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.worksheetupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.WorksheetUpdateData:interface'
-    summary: '<span data-ttu-id="8bbe9-101">一个用于更新工作表对象上的数据的接口，可用于`worksheet.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="8bbe9-101">An interface for updating data on the Worksheet object, for use in `worksheet.set({ ... })`</span></span><!-- --><span data-ttu-id="8bbe9-102">.</span><span class="sxs-lookup"><span data-stu-id="8bbe9-102"></span></span>'
+    summary: '一个用于更新工作表对象上的数据的接口，可用于`worksheet.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.WorksheetUpdateData
     fullName: Excel.Interfaces.WorksheetUpdateData
     langs:
@@ -14,9 +14,9 @@ items:
       - 'excel!Excel.Interfaces.WorksheetUpdateData#visibility:member'
   - uid: 'excel!Excel.Interfaces.WorksheetUpdateData#name:member'
     summary: |-
-      <span data-ttu-id="8bbe9-103">工作表的显示名称。</span><span class="sxs-lookup"><span data-stu-id="8bbe9-103">The display name of the worksheet.</span></span>
+      工作表的显示名称。
 
-      <span data-ttu-id="8bbe9-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8bbe9-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -29,9 +29,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.WorksheetUpdateData#position:member'
     summary: |-
-      <span data-ttu-id="8bbe9-105">工作表在工作簿中的位置，从零开始。</span><span class="sxs-lookup"><span data-stu-id="8bbe9-105">The zero-based position of the worksheet within the workbook.</span></span>
+      工作表在工作簿中的位置，从零开始。
 
-      <span data-ttu-id="8bbe9-106">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8bbe9-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
     fullName: position
     langs:
@@ -44,9 +44,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.WorksheetUpdateData#visibility:member'
     summary: |-
-      <span data-ttu-id="8bbe9-107">工作表的可见性。</span><span class="sxs-lookup"><span data-stu-id="8bbe9-107">The Visibility of the worksheet.</span></span>
+      工作表的可见性。
 
-      <span data-ttu-id="8bbe9-108">\[[API 集： ExcelApi 1.1 用于读取可见性; 1.2 用于设置。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span><span class="sxs-lookup"><span data-stu-id="8bbe9-108">\[ [API set: ExcelApi 1.1 for reading visibility; 1.2 for setting it.](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span></span> <span data-ttu-id="8bbe9-109">\]</span><span class="sxs-lookup"><span data-stu-id="8bbe9-109"></span></span>
+      \[[API 集： ExcelApi 1.1 用于读取可见性; 1.2 用于设置。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]
     name: visibility
     fullName: visibility
     langs:
