--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.shapeupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.shapeupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ShapeUpdateData:interface'
-    summary: '<span data-ttu-id="1011c-101">一个接口，用于更新 Shape 对象上的数据，以供在`shape.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="1011c-101">An interface for updating data on the Shape object, for use in `shape.set({ ... })`</span></span><!-- --><span data-ttu-id="1011c-102">.</span><span class="sxs-lookup"><span data-stu-id="1011c-102"></span></span>'
+    summary: '一个接口，用于更新 Shape 对象上的数据，以供在`shape.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ShapeUpdateData
     fullName: Excel.Interfaces.ShapeUpdateData
     langs:
