--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.custompropertycollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.custompropertycollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.CustomPropertyCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="1db85-101">一个用于更新 CustomPropertyCollection 对象上的数据的接口，可用于`customPropertyCollection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="1db85-101">An interface for updating data on the CustomPropertyCollection object, for use in `customPropertyCollection.set({ ... })`</span></span><!-- --><span data-ttu-id="1db85-102">.</span><span class="sxs-lookup"><span data-stu-id="1db85-102"></span></span>'
+    summary: '一个用于更新 CustomPropertyCollection 对象上的数据的接口，可用于`customPropertyCollection.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.CustomPropertyCollectionUpdateData
     fullName: Excel.Interfaces.CustomPropertyCollectionUpdateData
     langs:
