--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.topbottomconditionalformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.topbottomconditionalformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.TopBottomConditionalFormatUpdateData:interface'
-    summary: '<span data-ttu-id="ffdcd-101">一个用于更新 TopBottomConditionalFormat 对象上的数据的接口，可用于`topBottomConditionalFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="ffdcd-101">An interface for updating data on the TopBottomConditionalFormat object, for use in `topBottomConditionalFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="ffdcd-102">.</span><span class="sxs-lookup"><span data-stu-id="ffdcd-102"></span></span>'
+    summary: '一个用于更新 TopBottomConditionalFormat 对象上的数据的接口，可用于`topBottomConditionalFormat.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.TopBottomConditionalFormatUpdateData
     fullName: Excel.Interfaces.TopBottomConditionalFormatUpdateData
     langs:
@@ -13,9 +13,9 @@ items:
       - 'excel!Excel.Interfaces.TopBottomConditionalFormatUpdateData#rule:member'
   - uid: 'excel!Excel.Interfaces.TopBottomConditionalFormatUpdateData#format:member'
     summary: |-
-      <span data-ttu-id="ffdcd-103">返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。</span><span class="sxs-lookup"><span data-stu-id="ffdcd-103">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties.</span></span>
+      返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。
 
-      <span data-ttu-id="ffdcd-104">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ffdcd-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -28,9 +28,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.TopBottomConditionalFormatUpdateData#rule:member'
     summary: |-
-      <span data-ttu-id="ffdcd-105">顶部/底部条件格式的条件。</span><span class="sxs-lookup"><span data-stu-id="ffdcd-105">The criteria of the Top/Bottom conditional format.</span></span>
+      顶部/底部条件格式的条件。
 
-      <span data-ttu-id="ffdcd-106">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ffdcd-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rule
     fullName: rule
     langs:
