--- a/docs/docs-ref-autogen/word_1_3/word/word.cellpaddinglocation.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.cellpaddinglocation.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.CellPaddingLocation:enum'
-    summary: '<span data-ttu-id="429df-101">\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="429df-101">\[ [API set: WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]'
     name: Word.CellPaddingLocation
     fullName: Word.CellPaddingLocation
     langs:
