--- a/docs/docs-ref-autogen/word_1_3/word/word.contentcontrolappearance.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.contentcontrolappearance.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'word!Word.ContentControlAppearance:enum'
     summary: |-
-      <span data-ttu-id="b3b1f-101">ContentControl 外观</span><span class="sxs-lookup"><span data-stu-id="b3b1f-101">ContentControl appearance</span></span>
+      ContentControl 外观
 
-      <span data-ttu-id="b3b1f-102">\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b3b1f-102">\[ [API set: WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: Word.ContentControlAppearance
     fullName: Word.ContentControlAppearance
     langs:
@@ -16,7 +16,7 @@ items:
       - 'word!Word.ContentControlAppearance.hidden:member'
       - 'word!Word.ContentControlAppearance.tags:member'
   - uid: 'word!Word.ContentControlAppearance.boundingBox:member'
-    summary: <span data-ttu-id="b3b1f-103">表示显示为阴影矩形或边界框（带可选标题）的内容控件。</span><span class="sxs-lookup"><span data-stu-id="b3b1f-103">Represents a content control shown as a shaded rectangle or bounding box (with optional title).</span></span>
+    summary: 表示显示为阴影矩形或边界框（带可选标题）的内容控件。
     name: boundingBox
     fullName: boundingBox
     langs:
@@ -24,7 +24,7 @@ items:
     type: field
     numericValue: '"BoundingBox"'
   - uid: 'word!Word.ContentControlAppearance.hidden:member'
-    summary: <span data-ttu-id="b3b1f-104">表示未显示的内容控件。</span><span class="sxs-lookup"><span data-stu-id="b3b1f-104">Represents a content control that is not shown.</span></span>
+    summary: 表示未显示的内容控件。
     name: hidden
     fullName: hidden
     langs:
@@ -32,7 +32,7 @@ items:
     type: field
     numericValue: '"Hidden"'
   - uid: 'word!Word.ContentControlAppearance.tags:member'
-    summary: <span data-ttu-id="b3b1f-105">表示一个显示为开始和结束标记的内容控件。</span><span class="sxs-lookup"><span data-stu-id="b3b1f-105">Represents a content control shown as start and end markers.</span></span>
+    summary: 表示一个显示为开始和结束标记的内容控件。
     name: tags
     fullName: tags
     langs:
