--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.binding.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.binding.yml
@@ -176,7 +176,7 @@ items:
         type:
           - string
   - uid: 'excel!Excel.Binding#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(options)
     fullName: load(options)
     langs:
@@ -194,7 +194,7 @@ items:
           type:
             - 'excel!Excel.Interfaces.BindingLoadOptions:interface'
   - uid: 'excel!Excel.Binding#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -230,7 +230,7 @@ items:
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.Binding#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
