--- a/docs/docs-ref-autogen/word_1_2/word/word.listleveltype.yml
+++ b/docs/docs-ref-autogen/word_1_2/word/word.listleveltype.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.ListLevelType:enum'
-    summary: '<span data-ttu-id="e577c-101">\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e577c-101">\[ [API set: WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]'
     name: Word.ListLevelType
     fullName: Word.ListLevelType
     langs:
