commit translated contents

--- a/docs/docs-ref-autogen/office/office/office.asyncresultstatus.yml
+++ b/docs/docs-ref-autogen/office/office/office.asyncresultstatus.yml
@@ -2,7 +2,7 @@
 items:
   - uid: 'office!Office.AsyncResultStatus:enum'
     summary: 指定异步调用的结果。
-    remarks: '由 AsyncResult 对象`status`的属性返回[](xref:office!Office.AsyncResult:interface) 。'
+    remarks: '由 `status` [AsyncResult](xref:office!Office.AsyncResult:interface)对象的属性返回。'
     name: Office.AsyncResultStatus
     fullName: Office.AsyncResultStatus
     langs:
