--- a/docs/docs-ref-autogen/office/office/office.gotobyidoptions.yml
+++ b/docs/docs-ref-autogen/office/office/office.gotobyidoptions.yml
@@ -5,11 +5,11 @@ items:
     remarks: |-
       [SelectionMode](xref:office!Office.SelectionMode:enum)选项导致的行为因主机而异：
 
-      在 Excel 中`Office.SelectionMode.Selected` ：选择绑定或已命名项目中的所有内容。 `Office.SelectionMode.None`对于文本绑定，选择单元格;对于矩阵绑定、表绑定和已命名项目，选择第一个数据单元格（不是表的标题行中的第一个单元格）。
+      在 Excel 中： `Office.SelectionMode.Selected` 选择绑定或已命名项目中的所有内容。 `Office.SelectionMode.None`对于文本绑定，选择单元格;对于矩阵绑定、表绑定和已命名项目，选择第一个数据单元格（不是表的标题行中的第一个单元格）。
 
-      在 PowerPoint 中`Office.SelectionMode.Selected` ：选择幻灯片标题或幻灯片上的第一个文本框。 `Office.SelectionMode.None`不会选择任何内容。
+      在 PowerPoint 中： `Office.SelectionMode.Selected` 选择幻灯片标题或幻灯片上的第一个文本框。 `Office.SelectionMode.None`不会选择任何内容。
 
-      在 Word 中`Office.SelectionMode.Selected` ：选择绑定中的所有内容。 `Office.SelectionMode.None`对于文本绑定，将光标移至文本的开头;对于矩阵绑定和表绑定，选择第一个数据单元格（不是表的标题行中的第一个单元格）。
+      在 Word 中： `Office.SelectionMode.Selected` 选择绑定中的所有内容。 `Office.SelectionMode.None`对于文本绑定，将光标移至文本的开头;对于矩阵绑定和表绑定，选择第一个数据单元格（不是表的标题行中的第一个单元格）。
     name: Office.GoToByIdOptions
     fullName: Office.GoToByIdOptions
     langs:
