--- a/docs/docs-ref-autogen/office/office/office.requirementsetsupport.yml
+++ b/docs/docs-ref-autogen/office/office/office.requirementsetsupport.yml
@@ -54,6 +54,6 @@ items:
           type:
             - string
         - id: minVersionNumber
-          description: 所需的最低版本（例如，1.4）。 **警告**：此重载`isSetSupported` （其中`minVersionNumber`是一个数字）已被弃用。 `isSetSupported`改用的字符串重载。
+          description: 所需的最低版本（例如，1.4）。 **警告**：此重载 `isSetSupported` （其中 `minVersionNumber` 是一个数字）已被弃用。 改用的字符串重载 `isSetSupported` 。
           type:
             - number
