--- a/docs/docs-ref-autogen/excel/excel/excel.conditionalrangebordercollection.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.conditionalrangebordercollection.yml
@@ -161,7 +161,7 @@ items:
         type:
           - 'excel!Excel.ConditionalRangeBorder:class'
   - uid: 'excel!Excel.ConditionalRangeBorderCollection#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(options)
     fullName: load(options)
     langs:
@@ -179,7 +179,7 @@ items:
           type:
             - 'excel!Excel.ConditionalRangeBorderCollection#load~0:complex'
   - uid: 'excel!Excel.ConditionalRangeBorderCollection#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -197,7 +197,7 @@ items:
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ConditionalRangeBorderCollection#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -211,7 +211,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'excel!Excel.ConditionalRangeBorderCollection#right:member'
@@ -230,7 +230,7 @@ items:
         type:
           - 'excel!Excel.ConditionalRangeBorder:class'
   - uid: 'excel!Excel.ConditionalRangeBorderCollection#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.ConditionalRangeBorderCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ConditionalRangeBorderCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
+    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始 `Excel.ConditionalRangeBorderCollection` 对象是 API 对象，但 `toJSON` 方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ConditionalRangeBorderCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
