--- a/docs/docs-ref-autogen/excel_1_8/toc.yml
+++ b/docs/docs-ref-autogen/excel_1_8/toc.yml
@@ -226,7 +226,7 @@ items:
                 uid: 'excel!Excel.ThreeTrafficLights2Set:interface'
               - name: ThreeTrianglesSet
                 uid: 'excel!Excel.ThreeTrianglesSet:interface'
-          - name: Application
+          - name: 应用程序
             uid: 'excel!Excel.Application:class'
           - name: BasicDataValidation
             uid: 'excel!Excel.BasicDataValidation:interface'
@@ -442,7 +442,7 @@ items:
             uid: 'excel!Excel.PivotTableCollection:class'
           - name: PresetCriteriaConditionalFormat
             uid: 'excel!Excel.PresetCriteriaConditionalFormat:class'
-          - name: 范围
+          - name: Range
             uid: 'excel!Excel.Range:class'
           - name: RangeBorder
             uid: 'excel!Excel.RangeBorder:class'
@@ -614,7 +614,7 @@ items:
                     uid: 'office!Office.AddinCommands.Event:interface'
                   - name: EventCompletedOptions
                     uid: 'office!Office.AddinCommands.EventCompletedOptions:interface'
-                  - name: 源
+                  - name: Source
                     uid: 'office!Office.AddinCommands.Source:interface'
               - name: AsyncContextOptions
                 uid: 'office!Office.AsyncContextOptions:interface'
