--- a/docs/docs-ref-autogen/onenote/onenote/onenote.inkanalysislinecollection.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.inkanalysislinecollection.yml
@@ -133,7 +133,7 @@ items:
           type:
             - 'onenote!OneNote.InkAnalysisLineCollection#load~0:complex'
   - uid: 'onenote!OneNote.InkAnalysisLineCollection#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -168,7 +168,7 @@ items:
           type:
             - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'onenote!OneNote.InkAnalysisLineCollection#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`OneNote.InkAnalysisLineCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`OneNote.Interfaces.InkAnalysisLineCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
+    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始 `OneNote.InkAnalysisLineCollection` 对象是 API 对象，但 `toJSON` 方法返回一个无格式的 JavaScript 对象（类型为`OneNote.Interfaces.InkAnalysisLineCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
