commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.topbottomconditionalformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.topbottomconditionalformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.TopBottomConditionalFormatUpdateData:interface'
-    summary: '<span data-ttu-id="80f8d-101">一个用于更新 TopBottomConditionalFormat 对象上的数据的接口，可用于`topBottomConditionalFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="80f8d-101">An interface for updating data on the TopBottomConditionalFormat object, for use in `topBottomConditionalFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="80f8d-102">.</span><span class="sxs-lookup"><span data-stu-id="80f8d-102"></span></span>'
+    summary: '一个用于更新 TopBottomConditionalFormat 对象上的数据的接口，可用于`topBottomConditionalFormat.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.TopBottomConditionalFormatUpdateData
     fullName: Excel.Interfaces.TopBottomConditionalFormatUpdateData
     langs:
