--- a/docs/docs-ref-autogen/office/office/office.asyncresultstatus.yml
+++ b/docs/docs-ref-autogen/office/office/office.asyncresultstatus.yml
@@ -1,8 +1,8 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'office!Office.AsyncResultStatus:enum'
-    summary: <span data-ttu-id="add93-101">指定异步调用的结果。</span><span class="sxs-lookup"><span data-stu-id="add93-101">Specifies the result of an asynchronous call.</span></span>
-    remarks: '<span data-ttu-id="add93-102">由 AsyncResult 对象`status`的属性返回[](xref:office!Office.AsyncResult:interface) 。</span><span class="sxs-lookup"><span data-stu-id="add93-102">Returned by the `status` property of the [AsyncResult](xref:office!Office.AsyncResult:interface) object.</span></span>'
+    summary: 指定异步调用的结果。
+    remarks: '由 `status` [AsyncResult](xref:office!Office.AsyncResult:interface)对象的属性返回。'
     name: Office.AsyncResultStatus
     fullName: Office.AsyncResultStatus
     langs:
@@ -13,14 +13,14 @@ items:
       - 'office!Office.AsyncResultStatus.Failed:member'
       - 'office!Office.AsyncResultStatus.Succeeded:member'
   - uid: 'office!Office.AsyncResultStatus.Failed:member'
-    summary: '<span data-ttu-id="add93-103">调用失败，请检查 error 对象。</span><span class="sxs-lookup"><span data-stu-id="add93-103">The call failed, check the error object.</span></span>'
+    summary: 调用失败，请检查 error 对象。
     name: Failed
     fullName: Failed
     langs:
       - typeScript
     type: field
   - uid: 'office!Office.AsyncResultStatus.Succeeded:member'
-    summary: <span data-ttu-id="add93-104">调用成功。</span><span class="sxs-lookup"><span data-stu-id="add93-104">The call succeeded.</span></span>
+    summary: 调用成功。
     name: Succeeded
     fullName: Succeeded
     langs:
