--- a/docs/docs-ref-autogen/excel/excel/excel.conditionaliconcriterionoperator.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.conditionaliconcriterionoperator.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.ConditionalIconCriterionOperator:enum'
     summary: |-
-      <span data-ttu-id="f14c0-101">表示每个图标条件对应的运算符。</span><span class="sxs-lookup"><span data-stu-id="f14c0-101">Represents the operator for each icon criteria.</span></span>
+      表示每个图标条件对应的运算符。
 
-      <span data-ttu-id="f14c0-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f14c0-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ConditionalIconCriterionOperator
     fullName: Excel.ConditionalIconCriterionOperator
     langs:
