--- a/docs/docs-ref-autogen/excel/excel/excel.conditionalrangeborderindex.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.conditionalrangeborderindex.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.ConditionalRangeBorderIndex:enum'
-    summary: '<span data-ttu-id="b4306-101">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b4306-101">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
     name: Excel.ConditionalRangeBorderIndex
     fullName: Excel.ConditionalRangeBorderIndex
     langs:
