--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.commentreplycollectiondata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.commentreplycollectiondata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.CommentReplyCollectionData:interface'
-    summary: <span data-ttu-id="fb423-101">描述通过调用返回的数据的接口`commentReplyCollection.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="fb423-101">An interface describing the data returned by calling `commentReplyCollection.toJSON()`</span></span><!-- --><span data-ttu-id="fb423-102">.</span><span class="sxs-lookup"><span data-stu-id="fb423-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`commentReplyCollection.toJSON()`<!-- -->.
     name: Excel.Interfaces.CommentReplyCollectionData
     fullName: Excel.Interfaces.CommentReplyCollectionData
     langs:
