--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.topbottomconditionalformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.topbottomconditionalformatdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.TopBottomConditionalFormatData:interface'
-    summary: <span data-ttu-id="0929f-101">描述通过调用返回的数据的接口`topBottomConditionalFormat.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="0929f-101">An interface describing the data returned by calling `topBottomConditionalFormat.toJSON()`</span></span><!-- --><span data-ttu-id="0929f-102">.</span><span class="sxs-lookup"><span data-stu-id="0929f-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`topBottomConditionalFormat.toJSON()`<!-- -->.
     name: Excel.Interfaces.TopBottomConditionalFormatData
     fullName: Excel.Interfaces.TopBottomConditionalFormatData
     langs:
