--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.workbookloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.workbookloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="4cead-101">工作簿是顶级对象，其中包含相关的工作簿对象，如工作表、表、范围等。若要了解有关工作簿对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理工作簿](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-workbooks)</span><span class="sxs-lookup"><span data-stu-id="4cead-101">Workbook is the top level object which contains related workbook objects such as worksheets, tables, ranges, etc. To learn more about the workbook object model, read [Work with workbooks using the Excel JavaScript API](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-workbooks)</span></span><!-- --><span data-ttu-id="4cead-102">.</span><span class="sxs-lookup"><span data-stu-id="4cead-102"></span></span>
+      工作簿是顶级对象，其中包含相关的工作簿对象，如工作表、表、范围等。若要了解有关工作簿对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理工作簿](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-workbooks)<!-- -->.
 
-      <span data-ttu-id="4cead-103">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4cead-103">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.WorkbookLoadOptions
     fullName: Excel.Interfaces.WorkbookLoadOptions
     langs:
@@ -17,7 +17,7 @@ items:
       - 'excel!Excel.Interfaces.WorkbookLoadOptions#bindings:member'
       - 'excel!Excel.Interfaces.WorkbookLoadOptions#tables:member'
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#$all:member'
-    summary: '<span data-ttu-id="4cead-104">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="4cead-104">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="4cead-105">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="4cead-105">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="4cead-106">).</span><span class="sxs-lookup"><span data-stu-id="4cead-106"></span></span>'
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
@@ -30,9 +30,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#application:member'
     summary: |-
-      <span data-ttu-id="4cead-107">表示包含此工作簿的 Excel 应用程序实例。</span><span class="sxs-lookup"><span data-stu-id="4cead-107">Represents the Excel application instance that contains this workbook.</span></span>
+      表示包含此工作簿的 Excel 应用程序实例。
 
-      <span data-ttu-id="4cead-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4cead-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: application
     fullName: application
     langs:
@@ -45,9 +45,9 @@ items:
           - 'excel!Excel.Interfaces.ApplicationLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#bindings:member'
     summary: |-
-      <span data-ttu-id="4cead-109">表示属于工作簿的绑定的集合。</span><span class="sxs-lookup"><span data-stu-id="4cead-109">Represents a collection of bindings that are part of the workbook.</span></span>
+      表示属于工作簿的绑定的集合。
 
-      <span data-ttu-id="4cead-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4cead-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bindings
     fullName: bindings
     langs:
@@ -60,9 +60,9 @@ items:
           - 'excel!Excel.Interfaces.BindingCollectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#tables:member'
     summary: |-
-      <span data-ttu-id="4cead-111">表示与工作簿关联的表的集合。</span><span class="sxs-lookup"><span data-stu-id="4cead-111">Represents a collection of tables associated with the workbook.</span></span>
+      表示与工作簿关联的表的集合。
 
-      <span data-ttu-id="4cead-112">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4cead-112">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tables
     fullName: tables
     langs:
