--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.workbookprotectiondata.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.workbookprotectiondata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.WorkbookProtectionData:interface'
-    summary: <span data-ttu-id="164cd-101">描述通过调用返回的数据的接口`workbookProtection.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="164cd-101">An interface describing the data returned by calling `workbookProtection.toJSON()`</span></span><!-- --><span data-ttu-id="164cd-102">.</span><span class="sxs-lookup"><span data-stu-id="164cd-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`workbookProtection.toJSON()`<!-- -->.
     name: Excel.Interfaces.WorkbookProtectionData
     fullName: Excel.Interfaces.WorkbookProtectionData
     langs:
