--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.workbookupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.workbookupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.WorkbookUpdateData:interface'
-    summary: '<span data-ttu-id="886b8-101">一个用于更新工作簿对象上的数据的接口，可用于`workbook.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="886b8-101">An interface for updating data on the Workbook object, for use in `workbook.set({ ... })`</span></span><!-- --><span data-ttu-id="886b8-102">.</span><span class="sxs-lookup"><span data-stu-id="886b8-102"></span></span>'
+    summary: '一个用于更新工作簿对象上的数据的接口，可用于`workbook.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.WorkbookUpdateData
     fullName: Excel.Interfaces.WorkbookUpdateData
     langs:
