--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.chartlegendentryupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.chartlegendentryupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryUpdateData:interface'
-    summary: '<span data-ttu-id="22a90-101">一个用于更新 ChartLegendEntry 对象上的数据的接口，可用于`chartLegendEntry.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="22a90-101">An interface for updating data on the ChartLegendEntry object, for use in `chartLegendEntry.set({ ... })`</span></span><!-- --><span data-ttu-id="22a90-102">.</span><span class="sxs-lookup"><span data-stu-id="22a90-102"></span></span>'
+    summary: '一个用于更新 ChartLegendEntry 对象上的数据的接口，可用于`chartLegendEntry.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartLegendEntryUpdateData
     fullName: Excel.Interfaces.ChartLegendEntryUpdateData
     langs:
