--- a/docs/docs-ref-autogen/office/office/office.requirementsetsupport.yml
+++ b/docs/docs-ref-autogen/office/office/office.requirementsetsupport.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'office!Office.RequirementSetSupport:interface'
-    summary: <span data-ttu-id="f8ec4-101">提供有关当前环境中支持的要求集的信息。</span><span class="sxs-lookup"><span data-stu-id="f8ec4-101">Provides information about which Requirement Sets are supported in the current environment.</span></span>
+    summary: 提供有关当前环境中支持的要求集的信息。
     name: Office.RequirementSetSupport
     fullName: Office.RequirementSetSupport
     langs:
@@ -12,7 +12,7 @@ items:
       - 'office!Office.RequirementSetSupport#isSetSupported:member(1)'
       - 'office!Office.RequirementSetSupport#isSetSupported:member(2)'
   - uid: 'office!Office.RequirementSetSupport#isSetSupported:member(1)'
-    summary: <span data-ttu-id="f8ec4-102">检查主机 Office 应用程序是否支持指定的要求集。</span><span class="sxs-lookup"><span data-stu-id="f8ec4-102">Check if the specified requirement set is supported by the host Office application.</span></span>
+    summary: 检查主机 Office 应用程序是否支持指定的要求集。
     name: 'isSetSupported(name, minVersion)'
     fullName: 'isSetSupported(name, minVersion)'
     langs:
@@ -26,15 +26,15 @@ items:
         description: ''
       parameters:
         - id: name
-          description: '<span data-ttu-id="f8ec4-103">要求集名称（例如，"ExcelApi"）。</span><span class="sxs-lookup"><span data-stu-id="f8ec4-103">The requirement set name (e.g., "ExcelApi").</span></span>'
+          description: 要求集名称（例如，"ExcelApi"）。
           type:
             - string
         - id: minVersion
-          description: '<span data-ttu-id="f8ec4-104">所需的最低版本（例如，"1.4"）。</span><span class="sxs-lookup"><span data-stu-id="f8ec4-104">The minimum required version (e.g., "1.4").</span></span>'
+          description: 所需的最低版本（例如，"1.4"）。
           type:
             - string
   - uid: 'office!Office.RequirementSetSupport#isSetSupported:member(2)'
-    summary: <span data-ttu-id="f8ec4-105">检查主机 Office 应用程序是否支持指定的要求集。</span><span class="sxs-lookup"><span data-stu-id="f8ec4-105">Check if the specified requirement set is supported by the host Office application.</span></span>
+    summary: 检查主机 Office 应用程序是否支持指定的要求集。
     deprecated:
       content: Use the string overload of `isSetSupported` instead.
     name: 'isSetSupported(name, minVersionNumber)'
@@ -50,10 +50,10 @@ items:
         description: ''
       parameters:
         - id: name
-          description: '<span data-ttu-id="f8ec4-106">要求集名称（例如，"ExcelApi"）。</span><span class="sxs-lookup"><span data-stu-id="f8ec4-106">The requirement set name (e.g., "ExcelApi").</span></span>'
+          description: 要求集名称（例如，"ExcelApi"）。
           type:
             - string
         - id: minVersionNumber
-          description: '<span data-ttu-id="f8ec4-107">所需的最低版本（例如，1.4）。</span><span class="sxs-lookup"><span data-stu-id="f8ec4-107">The minimum required version (e.g., 1.4).</span></span> <span data-ttu-id="f8ec4-108">**警告**：此重载`isSetSupported` （其中`minVersionNumber`是一个数字）已被弃用。</span><span class="sxs-lookup"><span data-stu-id="f8ec4-108">**Warning**: This overload of `isSetSupported` (where `minVersionNumber` is a number) is deprecated.</span></span> <span data-ttu-id="f8ec4-109">`isSetSupported`改用的字符串重载。</span><span class="sxs-lookup"><span data-stu-id="f8ec4-109">Use the string overload of `isSetSupported` instead.</span></span>'
+          description: 所需的最低版本（例如，1.4）。 **警告**：此重载 `isSetSupported` （其中 `minVersionNumber` 是一个数字）已被弃用。 改用的字符串重载 `isSetSupported` 。
           type:
             - number
