--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tableloadoptions.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tableloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'onenote!OneNote.Interfaces.TableLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="634fb-101">表示 OneNote 页中的表格。</span><span class="sxs-lookup"><span data-stu-id="634fb-101">Represents a table in a OneNote page.</span></span>
+      表示 OneNote 页中的表格。
 
-      <span data-ttu-id="634fb-102">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="634fb-102">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: OneNote.Interfaces.TableLoadOptions
     fullName: OneNote.Interfaces.TableLoadOptions
     langs:
@@ -32,9 +32,9 @@ items:
           - boolean
   - uid: 'onenote!OneNote.Interfaces.TableLoadOptions#borderVisible:member'
     summary: |-
-      <span data-ttu-id="634fb-103">获取或设置边框是否可见。</span><span class="sxs-lookup"><span data-stu-id="634fb-103">Gets or sets whether the borders are visible or not.</span></span> <span data-ttu-id="634fb-104">如果为 true，则边框可见，如果为 false，则隐藏边框。</span><span class="sxs-lookup"><span data-stu-id="634fb-104">True if they are visible, false if they are hidden.</span></span>
+      获取或设置边框是否可见。 如果为 true，则边框可见，如果为 false，则隐藏边框。
 
-      <span data-ttu-id="634fb-105">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="634fb-105">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: borderVisible
     fullName: borderVisible
     langs:
@@ -47,9 +47,9 @@ items:
           - boolean
   - uid: 'onenote!OneNote.Interfaces.TableLoadOptions#columnCount:member'
     summary: |-
-      <span data-ttu-id="634fb-106">获取表中的列数。</span><span class="sxs-lookup"><span data-stu-id="634fb-106">Gets the number of columns in the table.</span></span>
+      获取表中的列数。
 
-      <span data-ttu-id="634fb-107">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="634fb-107">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: columnCount
     fullName: columnCount
     langs:
@@ -62,9 +62,9 @@ items:
           - boolean
   - uid: 'onenote!OneNote.Interfaces.TableLoadOptions#id:member'
     summary: |-
-      <span data-ttu-id="634fb-108">获取表格的 ID。</span><span class="sxs-lookup"><span data-stu-id="634fb-108">Gets the ID of the table.</span></span> <span data-ttu-id="634fb-109">只读。</span><span class="sxs-lookup"><span data-stu-id="634fb-109">Read-only.</span></span>
+      获取表格的 ID。 只读。
 
-      <span data-ttu-id="634fb-110">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="634fb-110">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -77,9 +77,9 @@ items:
           - boolean
   - uid: 'onenote!OneNote.Interfaces.TableLoadOptions#paragraph:member'
     summary: |-
-      <span data-ttu-id="634fb-111">获取包含“表格”对象的“段落”对象。</span><span class="sxs-lookup"><span data-stu-id="634fb-111">Gets the Paragraph object that contains the Table object.</span></span>
+      获取包含“表格”对象的“段落”对象。
 
-      <span data-ttu-id="634fb-112">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="634fb-112">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: paragraph
     fullName: paragraph
     langs:
@@ -92,9 +92,9 @@ items:
           - 'onenote!OneNote.Interfaces.ParagraphLoadOptions:interface'
   - uid: 'onenote!OneNote.Interfaces.TableLoadOptions#rowCount:member'
     summary: |-
-      <span data-ttu-id="634fb-113">获取表格中的行数。</span><span class="sxs-lookup"><span data-stu-id="634fb-113">Gets the number of rows in the table.</span></span>
+      获取表格中的行数。
 
-      <span data-ttu-id="634fb-114">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="634fb-114">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: rowCount
     fullName: rowCount
     langs:
@@ -107,9 +107,9 @@ items:
           - boolean
   - uid: 'onenote!OneNote.Interfaces.TableLoadOptions#rows:member'
     summary: |-
-      <span data-ttu-id="634fb-115">获取所有表格行。</span><span class="sxs-lookup"><span data-stu-id="634fb-115">Gets all of the table rows.</span></span>
+      获取所有表格行。
 
-      <span data-ttu-id="634fb-116">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="634fb-116">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: rows
     fullName: rows
     langs:
