commit translated contents

--- a/docs/docs-ref-autogen/office/office/officeextension.clientrequestcontext.yml
+++ b/docs/docs-ref-autogen/office/office/officeextension.clientrequestcontext.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'office!OfficeExtension.ClientRequestContext:class'
-    summary: 一个抽象的 RequestContext 对象，可促进对主机 Office 应用程序的请求。 `Excel.run`和`Word.run`方法提供请求上下文。
+    summary: 一个抽象的 RequestContext 对象，可促进对主机 Office 应用程序的请求。 `Excel.run`和 `Word.run` 方法提供请求上下文。
     name: OfficeExtension.ClientRequestContext
     fullName: OfficeExtension.ClientRequestContext
     langs:
@@ -18,7 +18,7 @@ items:
       - 'office!OfficeExtension.ClientRequestContext#trace:member(1)'
       - 'office!OfficeExtension.ClientRequestContext#trackedObjects:member'
   - uid: 'office!OfficeExtension.ClientRequestContext:constructor(1)'
-    summary: 构造`ClientRequestContext`类的新实例
+    summary: 构造类的新实例 `ClientRequestContext`
     name: (constructor)(url)
     fullName: (constructor)(url)
     langs:
@@ -44,7 +44,7 @@ items:
         type:
           - 'office!OfficeExtension.RequestContextDebugInfo:interface'
   - uid: 'office!OfficeExtension.ClientRequestContext#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: 'load(object, option)'
     fullName: 'load(object, option)'
     langs:
@@ -69,7 +69,7 @@ items:
     summary: |-
       对命令进行排队，以以递归方式加载对象的指定属性及其导航属性。
 
-      在读取属性`context.sync()`之前，必须先调用。
+      阅读属性前必须先调用 `context.sync()`。
     name: 'loadRecursive(object, options, maxDepth)'
     fullName: 'loadRecursive(object, options, maxDepth)'
     langs:
@@ -127,7 +127,7 @@ items:
       typeParameters:
         - id: T
   - uid: 'office!OfficeExtension.ClientRequestContext#trace:member(1)'
-    summary: 向队列中添加跟踪消息。 如果由于错误而拒绝`context.sync()`返回的承诺，则会将 "traceMessages" 数组添加到 officeextension.error 对象，其中包含已执行的所有跟踪消息。 这些消息可帮助您监视程序执行序列并检测错误的原因。
+    summary: 向队列中添加跟踪消息。 如果 `context.sync()` 由于错误而拒绝返回的承诺，则会将 "traceMessages" 数组添加到 officeextension.error 对象，其中包含已执行的所有跟踪消息。 这些消息可帮助您监视程序执行序列并检测错误的原因。
     name: trace(message)
     fullName: trace(message)
     langs:
