--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.rangeviewupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.rangeviewupdatedata.yml
@@ -46,7 +46,7 @@ items:
           - 'any[][]'
   - uid: 'excel!Excel.Interfaces.RangeViewUpdateData#formulasR1C1:member'
     summary: |-
-      表示采用 R1C1 表示法的公式。
+      表示采用 R1C1 样式表示法的公式。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulasR1C1
