--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.pagelayoutloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.pagelayoutloadoptions.yml
@@ -34,7 +34,7 @@ items:
       - 'excel!Excel.Interfaces.PageLayoutLoadOptions#topMargin:member'
       - 'excel!Excel.Interfaces.PageLayoutLoadOptions#zoom:member'
   - uid: 'excel!Excel.Interfaces.PageLayoutLoadOptions#$all:member'
-    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
@@ -332,7 +332,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PageLayoutLoadOptions#zoom:member'
     summary: |-
-      工作表的打印缩放选项。 必须`PageLayoutZoomOptions`将该对象设置为 JSON 对象（使用`x.zoom = {...}` ，而不是`x.zoom.scale = ...`<!-- -->).
+      工作表的打印缩放选项。 `PageLayoutZoomOptions`必须将该对象设置为 JSON 对象（使用， `x.zoom = {...}` 而不是`x.zoom.scale = ...`<!-- -->).
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: zoom
