--- a/docs/docs-ref-autogen/office/office/office.settings.yml
+++ b/docs/docs-ref-autogen/office/office/office.settings.yml
@@ -55,7 +55,7 @@ items:
           type:
             - 'office!Office.EventType:enum'
         - id: handler
-          description: '要添加的事件处理程序函数，其唯一的参数的类型为[SettingsChangedEventArgs](xref:office!Office.SettingsChangedEventArgs:interface)<!-- -->. 必填。'
+          description: '要添加的事件处理程序函数，其唯一的参数的类型为[SettingsChangedEventArgs](xref:office!Office.SettingsChangedEventArgs:interface)<!-- -->. 必需。'
           type:
             - any
         - id: options
@@ -113,7 +113,7 @@ items:
           type:
             - 'office!Office.EventType:enum'
         - id: handler
-          description: '要添加的事件处理程序函数，其唯一的参数的类型为[SettingsChangedEventArgs](xref:office!Office.SettingsChangedEventArgs:interface)<!-- -->. 必填。'
+          description: '要添加的事件处理程序函数，其唯一的参数的类型为[SettingsChangedEventArgs](xref:office!Office.SettingsChangedEventArgs:interface)<!-- -->. 必需。'
           type:
             - any
         - id: callback
@@ -251,7 +251,7 @@ items:
         description: ''
       parameters:
         - id: eventType
-          description: 指定要移除事件的类型。 必填。
+          description: 指定要移除事件的类型。 必需。
           type:
             - 'office!Office.EventType:enum'
         - id: options
@@ -303,7 +303,7 @@ items:
         description: ''
       parameters:
         - id: eventType
-          description: 指定要移除事件的类型。 必填。
+          description: 指定要移除事件的类型。 必需。
           type:
             - 'office!Office.EventType:enum'
         - id: callback
