--- a/docs/docs-ref-autogen/office/office/office.settingschangedeventargs.yml
+++ b/docs/docs-ref-autogen/office/office/office.settingschangedeventargs.yml
@@ -10,7 +10,7 @@ items:
 
       SettingsChanged 事件旨在让您在两个或更多用户尝试在共享（合著）文档中使用您的外接程序时同时尝试保存设置时处理潜在冲突。
 
-      **重要说明**：当外接程序使用任何 Excel 客户端运行时，加载项的代码可以为 settingsChanged 事件注册处理程序，但只有在加载加载项时，才会触发该事件，在 web 上的 Excel 中打开的电子表格以及多个用户正在编辑电子表格（合著）。 因此，只有在合著方案中，才会在 web 上的 Excel 中有效地支持 settingsChanged 事件。
+      **重要说明**：加载项的代码可以在使用任何 Excel 客户端运行加载项时为 settingsChanged 事件注册处理程序，但只有当加载项是使用在 Excel 的 excel 中打开的电子表格加载的，并且多个用户正在编辑电子表格（合著）时，才会触发该事件。 因此，只有在合著方案中，才会在 web 上的 Excel 中有效地支持 settingsChanged 事件。
     name: Office.SettingsChangedEventArgs
     fullName: Office.SettingsChangedEventArgs
     langs:
