--- a/docs/docs-ref-autogen/office/office/office.slice.yml
+++ b/docs/docs-ref-autogen/office/office/office.slice.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'office!Office.Slice:interface'
-    summary: 表示文档文件的切片。 切片对象通过`File.getSliceAsync`方法访问。
+    summary: 表示文档文件的切片。 切片对象通过 `File.getSliceAsync` 方法访问。
     name: Office.Slice
     fullName: Office.Slice
     langs:
@@ -13,7 +13,7 @@ items:
       - 'office!Office.Slice#index:member'
       - 'office!Office.Slice#size:member'
   - uid: 'office!Office.Slice#data:member'
-    summary: 获取文件切片的原始数据`Office.FileType.Text` ，或`Office.FileType.Compressed`以对`fileType` `Document.getFileAsync`方法的调用的参数指定的格式。
+    summary: 获取文件切片的原始数据，或以 `Office.FileType.Text` `Office.FileType.Compressed` 对方法的调用的参数指定的格式 `fileType` `Document.getFileAsync` 。
     remarks: '"compressed"格式的文件将返回可以在需要时转换为 base64 编码的字符串的字节数组。'
     name: data
     fullName: data
