commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.pivotlayoutdata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.pivotlayoutdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.PivotLayoutData:interface'
-    summary: <span data-ttu-id="523df-101">描述通过调用返回的数据的接口`pivotLayout.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="523df-101">An interface describing the data returned by calling `pivotLayout.toJSON()`</span></span><!-- --><span data-ttu-id="523df-102">.</span><span class="sxs-lookup"><span data-stu-id="523df-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`pivotLayout.toJSON()`<!-- -->.
     name: Excel.Interfaces.PivotLayoutData
     fullName: Excel.Interfaces.PivotLayoutData
     langs:
