--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.pivotitemupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.pivotitemupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.PivotItemUpdateData:interface'
-    summary: '<span data-ttu-id="c60df-101">一个用于更新 PivotItem 对象上的数据的接口，可用于`pivotItem.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="c60df-101">An interface for updating data on the PivotItem object, for use in `pivotItem.set({ ... })`</span></span><!-- --><span data-ttu-id="c60df-102">.</span><span class="sxs-lookup"><span data-stu-id="c60df-102"></span></span>'
+    summary: '一个用于更新 PivotItem 对象上的数据的接口，可用于`pivotItem.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.PivotItemUpdateData
     fullName: Excel.Interfaces.PivotItemUpdateData
     langs:
