commit translated contents

--- a/docs/docs-ref-autogen/excel/excel/excel.valuefiltercondition.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.valuefiltercondition.yml
@@ -24,7 +24,7 @@ items:
       - 'excel!Excel.ValueFilterCondition.unknown:member'
   - uid: 'excel!Excel.ValueFilterCondition.between:member'
     summary: |-
-      介于`lowerBound`和`upperBound`条件之间。
+      介于 `lowerBound` 和 `upperBound` 条件之间。
 
       必需的条件： {`value`<!-- -->, `lowerBound`<!-- -->, `upperBound`<!-- -->}<!-- -->. 可选条件： {`exclusive`<!-- -->}<!-- -->.
     isPreview: true
@@ -36,7 +36,7 @@ items:
     numericValue: '"Between"'
   - uid: 'excel!Excel.ValueFilterCondition.bottomN:member'
     summary: |-
-      在底部 N （`threshold`<!-- -->） \[项目、百分比和值\]类别的总和。
+      在底部 N （`threshold`<!-- -->） \[ 项目、百分比和 \] 值类别的总和。
 
       必需的条件： {`value`<!-- -->, `threshold`<!-- -->, `selectionType`<!-- -->}<!-- -->.
     isPreview: true
@@ -108,7 +108,7 @@ items:
     numericValue: '"LessThanOrEqualTo"'
   - uid: 'excel!Excel.ValueFilterCondition.topN:member'
     summary: |-
-      在前 N 个（`threshold`<!-- -->） \[项目、百分比和值\]类别的总和。
+      在前 N 个（`threshold`<!-- -->） \[ 项目、百分比和 \] 值类别的总和。
 
       必需的条件： {`value`<!-- -->, `threshold`<!-- -->, `selectionType`<!-- -->}<!-- -->.
     isPreview: true
