commit translated contents

--- a/docs/docs-ref-autogen/word_1_3/word/word.documentcreated.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.documentcreated.yml
@@ -73,7 +73,7 @@ items:
         type:
           - 'word!Word.RequestContext:class'
   - uid: 'word!Word.DocumentCreated#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(options)
     fullName: load(options)
     langs:
@@ -91,7 +91,7 @@ items:
           type:
             - 'word!Word.Interfaces.DocumentCreatedLoadOptions:interface'
   - uid: 'word!Word.DocumentCreated#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -109,7 +109,7 @@ items:
           type:
             - 'string | string[]'
   - uid: 'word!Word.DocumentCreated#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
