--- a/docs/docs-ref-autogen/word_1_2/word/word.paragraphcollection.yml
+++ b/docs/docs-ref-autogen/word_1_2/word/word.paragraphcollection.yml
@@ -47,7 +47,7 @@ items:
         type:
           - 'word!Word.ParagraphCollection#items~0:complex'
   - uid: 'word!Word.ParagraphCollection#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(options)
     fullName: load(options)
     langs:
@@ -98,7 +98,7 @@ items:
           type:
             - 'word!Word.ParagraphCollection#load~0:complex'
   - uid: 'word!Word.ParagraphCollection#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -116,7 +116,7 @@ items:
           type:
             - 'string | string[]'
   - uid: 'word!Word.ParagraphCollection#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
