commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.imagedata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.imagedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ImageData:interface'
-    summary: <span data-ttu-id="a3045-101">描述通过调用返回的数据的接口`image.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="a3045-101">An interface describing the data returned by calling `image.toJSON()`</span></span><!-- --><span data-ttu-id="a3045-102">.</span><span class="sxs-lookup"><span data-stu-id="a3045-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`image.toJSON()`<!-- -->.
     name: Excel.Interfaces.ImageData
     fullName: Excel.Interfaces.ImageData
     langs:
