--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.nameditemcollectiondata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.nameditemcollectiondata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionData:interface'
-    summary: <span data-ttu-id="b6fe2-101">描述通过调用返回的数据的接口`namedItemCollection.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="b6fe2-101">An interface describing the data returned by calling `namedItemCollection.toJSON()`</span></span><!-- --><span data-ttu-id="b6fe2-102">.</span><span class="sxs-lookup"><span data-stu-id="b6fe2-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`namedItemCollection.toJSON()`<!-- -->.
     name: Excel.Interfaces.NamedItemCollectionData
     fullName: Excel.Interfaces.NamedItemCollectionData
     langs:
