--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.pivotfieldcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.pivotfieldcollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.PivotFieldCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="419bb-101">一个用于更新 PivotFieldCollection 对象上的数据的接口，可用于`pivotFieldCollection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="419bb-101">An interface for updating data on the PivotFieldCollection object, for use in `pivotFieldCollection.set({ ... })`</span></span><!-- --><span data-ttu-id="419bb-102">.</span><span class="sxs-lookup"><span data-stu-id="419bb-102"></span></span>'
+    summary: '一个用于更新 PivotFieldCollection 对象上的数据的接口，可用于`pivotFieldCollection.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.PivotFieldCollectionUpdateData
     fullName: Excel.Interfaces.PivotFieldCollectionUpdateData
     langs:
