--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.documentpropertiesdata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.documentpropertiesdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.DocumentPropertiesData:interface'
-    summary: <span data-ttu-id="4bf09-101">描述通过调用返回的数据的接口`documentProperties.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="4bf09-101">An interface describing the data returned by calling `documentProperties.toJSON()`</span></span><!-- --><span data-ttu-id="4bf09-102">.</span><span class="sxs-lookup"><span data-stu-id="4bf09-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`documentProperties.toJSON()`<!-- -->.
     name: Excel.Interfaces.DocumentPropertiesData
     fullName: Excel.Interfaces.DocumentPropertiesData
     langs:
