--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.filterpivothierarchycollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.filterpivothierarchycollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="b15f1-101">一个用于更新 FilterPivotHierarchyCollection 对象上的数据的接口，可用于`filterPivotHierarchyCollection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="b15f1-101">An interface for updating data on the FilterPivotHierarchyCollection object, for use in `filterPivotHierarchyCollection.set({ ... })`</span></span><!-- --><span data-ttu-id="b15f1-102">.</span><span class="sxs-lookup"><span data-stu-id="b15f1-102"></span></span>'
+    summary: '一个用于更新 FilterPivotHierarchyCollection 对象上的数据的接口，可用于`filterPivotHierarchyCollection.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.FilterPivotHierarchyCollectionUpdateData
     fullName: Excel.Interfaces.FilterPivotHierarchyCollectionUpdateData
     langs:
