--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.headerfooterdata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.headerfooterdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.HeaderFooterData:interface'
-    summary: <span data-ttu-id="0b51c-101">描述通过调用返回的数据的接口`headerFooter.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="0b51c-101">An interface describing the data returned by calling `headerFooter.toJSON()`</span></span><!-- --><span data-ttu-id="0b51c-102">.</span><span class="sxs-lookup"><span data-stu-id="0b51c-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`headerFooter.toJSON()`<!-- -->.
     name: Excel.Interfaces.HeaderFooterData
     fullName: Excel.Interfaces.HeaderFooterData
     langs:
