--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.iterativecalculationdata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.iterativecalculationdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.IterativeCalculationData:interface'
-    summary: <span data-ttu-id="86bad-101">描述通过调用返回的数据的接口`iterativeCalculation.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="86bad-101">An interface describing the data returned by calling `iterativeCalculation.toJSON()`</span></span><!-- --><span data-ttu-id="86bad-102">.</span><span class="sxs-lookup"><span data-stu-id="86bad-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`iterativeCalculation.toJSON()`<!-- -->.
     name: Excel.Interfaces.IterativeCalculationData
     fullName: Excel.Interfaces.IterativeCalculationData
     langs:
