--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.clearapplyto.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.clearapplyto.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.ClearApplyTo:enum'
-    summary: '<span data-ttu-id="ebf2e-101">\[[API 集： ExcelApi 1.1 用于所有/格式/内容，1.7 用于超&amp;链接 HyperlinksAndFormats。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span><span class="sxs-lookup"><span data-stu-id="ebf2e-101">\[ [API set: ExcelApi 1.1 for All/Formats/Contents, 1.7 for Hyperlinks &amp; HyperlinksAndFormats.](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span></span> <span data-ttu-id="ebf2e-102">\]</span><span class="sxs-lookup"><span data-stu-id="ebf2e-102"></span></span>'
+    summary: '\[[API 集： ExcelApi 1.1 的所有/格式/内容、1.7 的超链接 &amp;HyperlinksAndFormats。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]'
     name: Excel.ClearApplyTo
     fullName: Excel.ClearApplyTo
     langs:
@@ -22,7 +22,7 @@ items:
     type: field
     numericValue: '"All"'
   - uid: 'excel!Excel.ClearApplyTo.contents:member'
-    summary: <span data-ttu-id="ebf2e-103">清除区域的内容。</span><span class="sxs-lookup"><span data-stu-id="ebf2e-103">Clears the contents of the range.</span></span>
+    summary: 清除区域的内容。
     name: contents
     fullName: contents
     langs:
@@ -30,7 +30,7 @@ items:
     type: field
     numericValue: '"Contents"'
   - uid: 'excel!Excel.ClearApplyTo.formats:member'
-    summary: <span data-ttu-id="ebf2e-104">清除区域的所有格式。</span><span class="sxs-lookup"><span data-stu-id="ebf2e-104">Clears all formatting for the range.</span></span>
+    summary: 清除区域的所有格式。
     name: formats
     fullName: formats
     langs:
@@ -38,7 +38,7 @@ items:
     type: field
     numericValue: '"Formats"'
   - uid: 'excel!Excel.ClearApplyTo.hyperlinks:member'
-    summary: '<span data-ttu-id="ebf2e-105">清除所有超链接，但保留所有内容和格式不变。</span><span class="sxs-lookup"><span data-stu-id="ebf2e-105">Clears all hyperlinks, but leaves all content and formatting intact.</span></span>'
+    summary: 清除所有超链接，但保留所有内容和格式不变。
     name: hyperlinks
     fullName: hyperlinks
     langs:
@@ -46,7 +46,7 @@ items:
     type: field
     numericValue: '"Hyperlinks"'
   - uid: 'excel!Excel.ClearApplyTo.removeHyperlinks:member'
-    summary: '<span data-ttu-id="ebf2e-106">删除单元格的超链接和格式，但保留内容、条件格式和数据验证不变。</span><span class="sxs-lookup"><span data-stu-id="ebf2e-106">Removes hyperlinks and formatting for the cell but leaves content, conditional formats, and data validation intact.</span></span>'
+    summary: 删除单元格的超链接和格式，但保留内容、条件格式和数据验证不变。
     name: removeHyperlinks
     fullName: removeHyperlinks
     langs:
