--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.conditionalformatdirection.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.conditionalformatdirection.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.ConditionalFormatDirection:enum'
     summary: |-
-      <span data-ttu-id="a30d7-101">代表所选内容的方向。</span><span class="sxs-lookup"><span data-stu-id="a30d7-101">Represents the direction for a selection.</span></span>
+      代表所选内容的方向。
 
-      <span data-ttu-id="a30d7-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a30d7-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ConditionalFormatDirection
     fullName: Excel.ConditionalFormatDirection
     langs:
