--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartgridlinesformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartgridlinesformatloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartGridlinesFormatLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="493d9-101">封装图表网格线的格式属性。</span><span class="sxs-lookup"><span data-stu-id="493d9-101">Encapsulates the format properties for chart gridlines.</span></span>
+      封装图表网格线的格式属性。
 
-      <span data-ttu-id="493d9-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="493d9-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartGridlinesFormatLoadOptions
     fullName: Excel.Interfaces.ChartGridlinesFormatLoadOptions
     langs:
@@ -15,7 +15,7 @@ items:
       - 'excel!Excel.Interfaces.ChartGridlinesFormatLoadOptions#$all:member'
       - 'excel!Excel.Interfaces.ChartGridlinesFormatLoadOptions#line:member'
   - uid: 'excel!Excel.Interfaces.ChartGridlinesFormatLoadOptions#$all:member'
-    summary: '<span data-ttu-id="493d9-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="493d9-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="493d9-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="493d9-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="493d9-105">).</span><span class="sxs-lookup"><span data-stu-id="493d9-105"></span></span>'
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
@@ -28,9 +28,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartGridlinesFormatLoadOptions#line:member'
     summary: |-
-      <span data-ttu-id="493d9-106">表示图表线条格式。</span><span class="sxs-lookup"><span data-stu-id="493d9-106">Represents chart line formatting.</span></span>
+      表示图表线条格式。
 
-      <span data-ttu-id="493d9-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="493d9-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: line
     fullName: line
     langs:
