--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.charttrendlineupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.charttrendlineupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartTrendlineUpdateData:interface'
-    summary: '<span data-ttu-id="00151-101">一个用于更新 ChartTrendline 对象上的数据的接口，可用于`chartTrendline.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="00151-101">An interface for updating data on the ChartTrendline object, for use in `chartTrendline.set({ ... })`</span></span><!-- --><span data-ttu-id="00151-102">.</span><span class="sxs-lookup"><span data-stu-id="00151-102"></span></span>'
+    summary: '一个用于更新 ChartTrendline 对象上的数据的接口，可用于`chartTrendline.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartTrendlineUpdateData
     fullName: Excel.Interfaces.ChartTrendlineUpdateData
     langs:
@@ -22,9 +22,9 @@ items:
       - 'excel!Excel.Interfaces.ChartTrendlineUpdateData#type:member'
   - uid: 'excel!Excel.Interfaces.ChartTrendlineUpdateData#backwardPeriod:member'
     summary: |-
-      <span data-ttu-id="00151-103">表示趋势线向后延伸的周期数。</span><span class="sxs-lookup"><span data-stu-id="00151-103">Represents the number of periods that the trendline extends backward.</span></span>
+      表示趋势线向后延伸的周期数。
 
-      <span data-ttu-id="00151-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="00151-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: backwardPeriod
     fullName: backwardPeriod
     langs:
@@ -37,9 +37,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartTrendlineUpdateData#format:member'
     summary: |-
-      <span data-ttu-id="00151-105">表示图表趋势线的格式。</span><span class="sxs-lookup"><span data-stu-id="00151-105">Represents the formatting of a chart trendline.</span></span>
+      表示图表趋势线的格式。
 
-      <span data-ttu-id="00151-106">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="00151-106">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -52,9 +52,9 @@ items:
           - 'excel!Excel.Interfaces.ChartTrendlineFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartTrendlineUpdateData#forwardPeriod:member'
     summary: |-
-      <span data-ttu-id="00151-107">表示趋势线向前延伸的周期数。</span><span class="sxs-lookup"><span data-stu-id="00151-107">Represents the number of periods that the trendline extends forward.</span></span>
+      表示趋势线向前延伸的周期数。
 
-      <span data-ttu-id="00151-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="00151-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: forwardPeriod
     fullName: forwardPeriod
     langs:
@@ -67,9 +67,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartTrendlineUpdateData#intercept:member'
     summary: |-
-      <span data-ttu-id="00151-109">表示趋势线的截距值。</span><span class="sxs-lookup"><span data-stu-id="00151-109">Represents the intercept value of the trendline.</span></span> <span data-ttu-id="00151-110">可以设置为数字值或空字符串（对于自动值）。</span><span class="sxs-lookup"><span data-stu-id="00151-110">Can be set to a numeric value or an empty string (for automatic values).</span></span> <span data-ttu-id="00151-111">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="00151-111">The returned value is always a number.</span></span>
+      表示趋势线的截距值。 可以设置为数字值或空字符串（对于自动值）。 返回的值始终为数字。
 
-      <span data-ttu-id="00151-112">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="00151-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: intercept
     fullName: intercept
     langs:
@@ -82,9 +82,9 @@ items:
           - any
   - uid: 'excel!Excel.Interfaces.ChartTrendlineUpdateData#label:member'
     summary: |-
-      <span data-ttu-id="00151-113">表示图表趋势线的标签。</span><span class="sxs-lookup"><span data-stu-id="00151-113">Represents the label of a chart trendline.</span></span>
+      表示图表趋势线的标签。
 
-      <span data-ttu-id="00151-114">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="00151-114">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: label
     fullName: label
     langs:
@@ -97,9 +97,9 @@ items:
           - 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartTrendlineUpdateData#movingAveragePeriod:member'
     summary: |-
-      <span data-ttu-id="00151-115">表示图表趋势线的周期。</span><span class="sxs-lookup"><span data-stu-id="00151-115">Represents the period of a chart trendline.</span></span> <span data-ttu-id="00151-116">仅适用于 MovingAverage 类型的趋势线。</span><span class="sxs-lookup"><span data-stu-id="00151-116">Only applicable for trendline with MovingAverage type.</span></span>
+      表示图表趋势线的周期。 仅适用于 MovingAverage 类型的趋势线。
 
-      <span data-ttu-id="00151-117">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="00151-117">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: movingAveragePeriod
     fullName: movingAveragePeriod
     langs:
@@ -112,9 +112,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartTrendlineUpdateData#name:member'
     summary: |-
-      <span data-ttu-id="00151-118">表示趋势线的名称。</span><span class="sxs-lookup"><span data-stu-id="00151-118">Represents the name of the trendline.</span></span> <span data-ttu-id="00151-119">可设为字符串值，或者设为 Null 值（表示自动值）。</span><span class="sxs-lookup"><span data-stu-id="00151-119">Can be set to a string value, or can be set to null value represents automatic values.</span></span> <span data-ttu-id="00151-120">返回的值始终为字符串</span><span class="sxs-lookup"><span data-stu-id="00151-120">The returned value is always a string</span></span>
+      表示趋势线的名称。 可设为字符串值，或者设为 Null 值（表示自动值）。 返回的值始终为字符串
 
-      <span data-ttu-id="00151-121">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="00151-121">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -127,9 +127,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartTrendlineUpdateData#polynomialOrder:member'
     summary: |-
-      <span data-ttu-id="00151-122">表示图表趋势线的顺序。</span><span class="sxs-lookup"><span data-stu-id="00151-122">Represents the order of a chart trendline.</span></span> <span data-ttu-id="00151-123">仅适用于具有多项式类型的趋势线。</span><span class="sxs-lookup"><span data-stu-id="00151-123">Only applicable for trendline with Polynomial type.</span></span>
+      表示图表趋势线的顺序。 仅适用于具有多项式类型的趋势线。
 
-      <span data-ttu-id="00151-124">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="00151-124">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: polynomialOrder
     fullName: polynomialOrder
     langs:
@@ -142,9 +142,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartTrendlineUpdateData#showEquation:member'
     summary: |-
-      <span data-ttu-id="00151-125">如果图表上显示趋势线公式，则为 True。</span><span class="sxs-lookup"><span data-stu-id="00151-125">True if the equation for the trendline is displayed on the chart.</span></span>
+      如果图表上显示趋势线公式，则为 True。
 
-      <span data-ttu-id="00151-126">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="00151-126">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showEquation
     fullName: showEquation
     langs:
@@ -157,9 +157,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartTrendlineUpdateData#showRSquared:member'
     summary: |-
-      <span data-ttu-id="00151-127">如果图表上显示趋势线的 R 平方值，则为 True。</span><span class="sxs-lookup"><span data-stu-id="00151-127">True if the R-squared for the trendline is displayed on the chart.</span></span>
+      如果图表上显示趋势线的 R 平方值，则为 True。
 
-      <span data-ttu-id="00151-128">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="00151-128">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showRSquared
     fullName: showRSquared
     langs:
@@ -172,9 +172,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartTrendlineUpdateData#type:member'
     summary: |-
-      <span data-ttu-id="00151-129">表示图表趋势线的类型。</span><span class="sxs-lookup"><span data-stu-id="00151-129">Represents the type of a chart trendline.</span></span>
+      表示图表趋势线的类型。
 
-      <span data-ttu-id="00151-130">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="00151-130">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
