--- a/docs/docs-ref-autogen/word_1_2/word/word.imageformat.yml
+++ b/docs/docs-ref-autogen/word_1_2/word/word.imageformat.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.ImageFormat:enum'
-    summary: '<span data-ttu-id="e4f03-101">\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4f03-101">\[ [API set: WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]'
     name: Word.ImageFormat
     fullName: Word.ImageFormat
     langs:
