commit bilingual contents

--- a/docs/docs-ref-autogen/visio/visio/visio.interfaces.commentloadoptions.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.interfaces.commentloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'visio!Visio.Interfaces.CommentLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="c39e3-101">表示 Comment 对象。</span><span class="sxs-lookup"><span data-stu-id="c39e3-101">Represents the Comment.</span></span>
+      表示 Comment 对象。
 
-      <span data-ttu-id="c39e3-102">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="c39e3-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: Visio.Interfaces.CommentLoadOptions
     fullName: Visio.Interfaces.CommentLoadOptions
     langs:
@@ -29,9 +29,9 @@ items:
           - boolean
   - uid: 'visio!Visio.Interfaces.CommentLoadOptions#author:member'
     summary: |-
-      <span data-ttu-id="c39e3-103">指定注释的作者姓名的字符串。</span><span class="sxs-lookup"><span data-stu-id="c39e3-103">A string that specifies the name of the author of the comment.</span></span>
+      指定注释的作者姓名的字符串。
 
-      <span data-ttu-id="c39e3-104">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="c39e3-104">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: author
     fullName: author
     langs:
@@ -44,9 +44,9 @@ items:
           - boolean
   - uid: 'visio!Visio.Interfaces.CommentLoadOptions#date:member'
     summary: |-
-      <span data-ttu-id="c39e3-105">指定注释创建日期的字符串。</span><span class="sxs-lookup"><span data-stu-id="c39e3-105">A string that specifies the date when the comment was created.</span></span>
+      指定注释创建日期的字符串。
 
-      <span data-ttu-id="c39e3-106">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="c39e3-106">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: date
     fullName: date
     langs:
@@ -59,9 +59,9 @@ items:
           - boolean
   - uid: 'visio!Visio.Interfaces.CommentLoadOptions#text:member'
     summary: |-
-      <span data-ttu-id="c39e3-107">包含注释文本的字符串。</span><span class="sxs-lookup"><span data-stu-id="c39e3-107">A string that contains the comment text.</span></span>
+      包含注释文本的字符串。
 
-      <span data-ttu-id="c39e3-108">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="c39e3-108">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: text
     fullName: text
     langs:
