--- a/docs/docs-ref-autogen/visio/visio/visio.documentloadcompleteeventargs.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.documentloadcompleteeventargs.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'visio!Visio.DocumentLoadCompleteEventArgs:interface'
     summary: |-
-      <span data-ttu-id="7dd4b-101">提供有关 DocumentLoadComplete 事件的成功或失败的信息。</span><span class="sxs-lookup"><span data-stu-id="7dd4b-101">Provides information about the success or failure of the DocumentLoadComplete event.</span></span>
+      提供有关 DocumentLoadComplete 事件的成功或失败的信息。
 
-      <span data-ttu-id="7dd4b-102">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="7dd4b-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: Visio.DocumentLoadCompleteEventArgs
     fullName: Visio.DocumentLoadCompleteEventArgs
     langs:
@@ -14,7 +14,7 @@ items:
     remarks: |-
 
 
-      #### <a name="examples"></a><span data-ttu-id="7dd4b-103">示例</span><span class="sxs-lookup"><span data-stu-id="7dd4b-103">Examples</span></span>
+      #### <a name="examples"></a>示例
 
       ```javascript
       Visio.run(session, function (ctx) {
@@ -38,9 +38,9 @@ items:
       - 'visio!Visio.DocumentLoadCompleteEventArgs#success:member'
   - uid: 'visio!Visio.DocumentLoadCompleteEventArgs#success:member'
     summary: |-
-      <span data-ttu-id="7dd4b-104">获取 DocumentLoadComplete 事件的成功或失败。</span><span class="sxs-lookup"><span data-stu-id="7dd4b-104">Gets the success or failure of the DocumentLoadComplete event.</span></span>
+      获取 DocumentLoadComplete 事件的成功或失败。
 
-      <span data-ttu-id="7dd4b-105">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="7dd4b-105">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: success
     fullName: success
     langs:
