--- a/docs/docs-ref-autogen/visio/visio/visio.highlight.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.highlight.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'visio!Visio.Highlight:interface'
     summary: |-
-      <span data-ttu-id="b2523-101">表示添加到形状的突出显示数据。</span><span class="sxs-lookup"><span data-stu-id="b2523-101">Represents the highlight data added to the shape.</span></span>
+      表示添加到形状的突出显示数据。
 
-      <span data-ttu-id="b2523-102">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="b2523-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: Visio.Highlight
     fullName: Visio.Highlight
     langs:
@@ -16,9 +16,9 @@ items:
       - 'visio!Visio.Highlight#width:member'
   - uid: 'visio!Visio.Highlight#color:member'
     summary: |-
-      <span data-ttu-id="b2523-103">指定突出显示数据的颜色的字符串。</span><span class="sxs-lookup"><span data-stu-id="b2523-103">A string that specifies the color of the highlight.</span></span> <span data-ttu-id="b2523-104">它必须具有 "\#RRGGBB" 窗体，其中每个字母表示一个介于0和 F 之间的十六进制数字，其中 RR 是介于0和0xff 之间的红色值（255），GG 值介于0和0xff （255）之间，BB 是介于0和0xff （255）之间的蓝色值。</span><span class="sxs-lookup"><span data-stu-id="b2523-104">It must have the form "\#RRGGBB", where each letter represents a hexadecimal digit between 0 and F, and where RR is the red value between 0 and 0xFF (255), GG the green value between 0 and 0xFF (255), and BB is the blue value between 0 and 0xFF (255).</span></span>
+      指定突出显示数据的颜色的字符串。 它必须具有 " \# RRGGBB" 窗体，其中每个字母表示一个介于0和 F 之间的十六进制数字，其中 RR 是介于0和0xff 之间的红色值（255），GG 值介于0和0xff （255）之间，BB 是介于0和0xff （255）之间的蓝色值。
 
-      <span data-ttu-id="b2523-105">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="b2523-105">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: color
     fullName: color
     langs:
@@ -32,7 +32,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="b2523-106">示例</span><span class="sxs-lookup"><span data-stu-id="b2523-106">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           Visio.run(session, function (ctx) {
@@ -50,9 +50,9 @@ items:
           ```
   - uid: 'visio!Visio.Highlight#width:member'
     summary: |-
-      <span data-ttu-id="b2523-107">指定突出显示数据的笔划宽度（以像素为单位）的正整数。</span><span class="sxs-lookup"><span data-stu-id="b2523-107">A positive integer that specifies the width of the highlight's stroke in pixels.</span></span>
+      指定突出显示数据的笔划宽度（以像素为单位）的正整数。
 
-      <span data-ttu-id="b2523-108">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="b2523-108">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: width
     fullName: width
     langs:
