--- a/docs/docs-ref-autogen/visio/visio/visio.shapemouseentereventargs.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.shapemouseentereventargs.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'visio!Visio.ShapeMouseEnterEventArgs:interface'
     summary: |-
-      <span data-ttu-id="fb6cb-101">提供有关引发了 ShapeMouseEnter 事件的形状的信息。</span><span class="sxs-lookup"><span data-stu-id="fb6cb-101">Provides information about the shape that raised the ShapeMouseEnter event.</span></span>
+      提供有关引发了 ShapeMouseEnter 事件的形状的信息。
 
-      <span data-ttu-id="fb6cb-102">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="fb6cb-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: Visio.ShapeMouseEnterEventArgs
     fullName: Visio.ShapeMouseEnterEventArgs
     langs:
@@ -14,7 +14,7 @@ items:
     remarks: |-
 
 
-      #### <a name="examples"></a><span data-ttu-id="fb6cb-103">示例</span><span class="sxs-lookup"><span data-stu-id="fb6cb-103">Examples</span></span>
+      #### <a name="examples"></a>示例
 
       ```javascript
       Visio.run(session, function (ctx) {
@@ -38,9 +38,9 @@ items:
       - 'visio!Visio.ShapeMouseEnterEventArgs#shapeName:member'
   - uid: 'visio!Visio.ShapeMouseEnterEventArgs#pageName:member'
     summary: |-
-      <span data-ttu-id="fb6cb-104">获取页面的名称，其中包含引发了 ShapeMouseEnter 事件的 shape 对象。</span><span class="sxs-lookup"><span data-stu-id="fb6cb-104">Gets the name of the page which has the shape object that raised the ShapeMouseEnter event.</span></span>
+      获取页面的名称，其中包含引发了 ShapeMouseEnter 事件的 shape 对象。
 
-      <span data-ttu-id="fb6cb-105">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="fb6cb-105">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: pageName
     fullName: pageName
     langs:
@@ -53,9 +53,9 @@ items:
           - string
   - uid: 'visio!Visio.ShapeMouseEnterEventArgs#shapeName:member'
     summary: |-
-      <span data-ttu-id="fb6cb-106">获取引发 ShapeMouseEnter 事件的 shape 对象的名称。</span><span class="sxs-lookup"><span data-stu-id="fb6cb-106">Gets the name of the shape object that raised the ShapeMouseEnter event.</span></span>
+      获取引发 ShapeMouseEnter 事件的 shape 对象的名称。
 
-      <span data-ttu-id="fb6cb-107">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="fb6cb-107">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: shapeName
     fullName: shapeName
     langs:
