--- a/docs/docs-ref-autogen/word/word/word.tapobjecttype.yml
+++ b/docs/docs-ref-autogen/word/word/word.tapobjecttype.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.TapObjectType:enum'
-    summary: '<span data-ttu-id="e03f2-101">\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e03f2-101">\[ [API set: WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]'
     name: Word.TapObjectType
     fullName: Word.TapObjectType
     langs:
