commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.charttrendlinelabelformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.charttrendlinelabelformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelFormatUpdateData:interface'
-    summary: '<span data-ttu-id="849b1-101">一个用于更新 ChartTrendlineLabelFormat 对象上的数据的接口，可用于`chartTrendlineLabelFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="849b1-101">An interface for updating data on the ChartTrendlineLabelFormat object, for use in `chartTrendlineLabelFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="849b1-102">.</span><span class="sxs-lookup"><span data-stu-id="849b1-102"></span></span>'
+    summary: '一个用于更新 ChartTrendlineLabelFormat 对象上的数据的接口，可用于`chartTrendlineLabelFormat.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartTrendlineLabelFormatUpdateData
     fullName: Excel.Interfaces.ChartTrendlineLabelFormatUpdateData
     langs:
