--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.charttrendlinelabelupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.charttrendlinelabelupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData:interface'
-    summary: '<span data-ttu-id="877c2-101">一个用于更新 ChartTrendlineLabel 对象上的数据的接口，可用于`chartTrendlineLabel.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="877c2-101">An interface for updating data on the ChartTrendlineLabel object, for use in `chartTrendlineLabel.set({ ... })`</span></span><!-- --><span data-ttu-id="877c2-102">.</span><span class="sxs-lookup"><span data-stu-id="877c2-102"></span></span>'
+    summary: '一个用于更新 ChartTrendlineLabel 对象上的数据的接口，可用于`chartTrendlineLabel.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartTrendlineLabelUpdateData
     fullName: Excel.Interfaces.ChartTrendlineLabelUpdateData
     langs:
