--- a/docs/docs-ref-autogen/office/office/office.selectionmode.yml
+++ b/docs/docs-ref-autogen/office/office/office.selectionmode.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'office!Office.SelectionMode:enum'
-    summary: '<span data-ttu-id="c7564-101">指定是否选择（突出显示）要导航到的位置（使用[文档](xref:office!Office.Document:interface)时）</span><span class="sxs-lookup"><span data-stu-id="c7564-101">Specifies whether to select (highlight) the location to navigate to (when using the [Document](xref:office!Office.Document:interface)</span></span><!-- --><span data-ttu-id="c7564-102">. Document.gotobyidasync 方法）。</span><span class="sxs-lookup"><span data-stu-id="c7564-102">.goToByIdAsync method).</span></span>'
+    summary: '指定是否选择（突出显示）要导航到的位置（使用[文档](xref:office!Office.Document:interface)时）<!-- -->. Document.gotobyidasync 方法）。'
     name: Office.SelectionMode
     fullName: Office.SelectionMode
     langs:
@@ -19,14 +19,14 @@ items:
       - typeScript
     type: field
   - uid: 'office!Office.SelectionMode.None:member'
-    summary: <span data-ttu-id="c7564-103">将光标移到该位置的开头。</span><span class="sxs-lookup"><span data-stu-id="c7564-103">The cursor is moved to the beginning of the location.</span></span>
+    summary: 将光标移到该位置的开头。
     name: None
     fullName: None
     langs:
       - typeScript
     type: field
   - uid: 'office!Office.SelectionMode.Selected:member'
-    summary: <span data-ttu-id="c7564-104">将选择（突出显示）的位置。</span><span class="sxs-lookup"><span data-stu-id="c7564-104">The location will be selected (highlighted).</span></span>
+    summary: 将选择（突出显示）的位置。
     name: Selected
     fullName: Selected
     langs:
