--- a/docs/docs-ref-autogen/visio/visio/visio.boundingbox.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.boundingbox.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'visio!Visio.BoundingBox:interface'
     summary: |-
-      <span data-ttu-id="161be-101">表示形状的 BoundingBox 对象。</span><span class="sxs-lookup"><span data-stu-id="161be-101">Represents the BoundingBox of the shape.</span></span>
+      表示形状的 BoundingBox 对象。
 
-      <span data-ttu-id="161be-102">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="161be-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: Visio.BoundingBox
     fullName: Visio.BoundingBox
     langs:
@@ -18,9 +18,9 @@ items:
       - 'visio!Visio.BoundingBox#y:member'
   - uid: 'visio!Visio.BoundingBox#height:member'
     summary: |-
-      <span data-ttu-id="161be-103">形状边界框的上下边缘之间的距离，不包括与形状相关联的任何数据图形。</span><span class="sxs-lookup"><span data-stu-id="161be-103">The distance between the top and bottom edges of the bounding box of the shape, excluding any data graphics associated with the shape.</span></span>
+      形状边界框的上下边缘之间的距离，不包括与形状相关联的任何数据图形。
 
-      <span data-ttu-id="161be-104">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="161be-104">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: height
     fullName: height
     langs:
@@ -33,9 +33,9 @@ items:
           - number
   - uid: 'visio!Visio.BoundingBox#width:member'
     summary: |-
-      <span data-ttu-id="161be-105">形状边界框的左右边缘之间的距离，不包括与形状相关联的任何数据图形。</span><span class="sxs-lookup"><span data-stu-id="161be-105">The distance between the left and right edges of the bounding box of the shape, excluding any data graphics associated with the shape.</span></span>
+      形状边界框的左右边缘之间的距离，不包括与形状相关联的任何数据图形。
 
-      <span data-ttu-id="161be-106">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="161be-106">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: width
     fullName: width
     langs:
@@ -48,9 +48,9 @@ items:
           - number
   - uid: 'visio!Visio.BoundingBox#x:member'
     summary: |-
-      <span data-ttu-id="161be-107">指定边界框的 X 坐标的整数。</span><span class="sxs-lookup"><span data-stu-id="161be-107">An integer that specifies the x-coordinate of the bounding box.</span></span>
+      指定边界框的 X 坐标的整数。
 
-      <span data-ttu-id="161be-108">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="161be-108">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: x
     fullName: x
     langs:
@@ -63,9 +63,9 @@ items:
           - number
   - uid: 'visio!Visio.BoundingBox#y:member'
     summary: |-
-      <span data-ttu-id="161be-109">指定边界框的 Y 坐标的整数。</span><span class="sxs-lookup"><span data-stu-id="161be-109">An integer that specifies the y-coordinate of the bounding box.</span></span>
+      指定边界框的 Y 坐标的整数。
 
-      <span data-ttu-id="161be-110">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="161be-110">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: 'y'
     fullName: 'y'
     langs:
