--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.rangecollectiondata.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.rangecollectiondata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RangeCollectionData:interface'
-    summary: <span data-ttu-id="b4c4f-101">描述通过调用返回的数据的接口`rangeCollection.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="b4c4f-101">An interface describing the data returned by calling `rangeCollection.toJSON()`</span></span><!-- --><span data-ttu-id="b4c4f-102">.</span><span class="sxs-lookup"><span data-stu-id="b4c4f-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`rangeCollection.toJSON()`<!-- -->.
     name: Excel.Interfaces.RangeCollectionData
     fullName: Excel.Interfaces.RangeCollectionData
     langs:
