--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.rowcolumnpivothierarchyupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.rowcolumnpivothierarchyupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RowColumnPivotHierarchyUpdateData:interface'
-    summary: '<span data-ttu-id="9a523-101">一个用于更新 RowColumnPivotHierarchy 对象上的数据的接口，可用于`rowColumnPivotHierarchy.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="9a523-101">An interface for updating data on the RowColumnPivotHierarchy object, for use in `rowColumnPivotHierarchy.set({ ... })`</span></span><!-- --><span data-ttu-id="9a523-102">.</span><span class="sxs-lookup"><span data-stu-id="9a523-102"></span></span>'
+    summary: '一个用于更新 RowColumnPivotHierarchy 对象上的数据的接口，可用于`rowColumnPivotHierarchy.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.RowColumnPivotHierarchyUpdateData
     fullName: Excel.Interfaces.RowColumnPivotHierarchyUpdateData
     langs:
