--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.chartpointupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.chartpointupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartPointUpdateData:interface'
-    summary: '<span data-ttu-id="54731-101">一个用于更新 ChartPoint 对象上的数据的接口，可用于`chartPoint.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="54731-101">An interface for updating data on the ChartPoint object, for use in `chartPoint.set({ ... })`</span></span><!-- --><span data-ttu-id="54731-102">.</span><span class="sxs-lookup"><span data-stu-id="54731-102"></span></span>'
+    summary: '一个用于更新 ChartPoint 对象上的数据的接口，可用于`chartPoint.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartPointUpdateData
     fullName: Excel.Interfaces.ChartPointUpdateData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'excel!Excel.Interfaces.ChartPointUpdateData#format:member'
   - uid: 'excel!Excel.Interfaces.ChartPointUpdateData#format:member'
     summary: |-
-      <span data-ttu-id="54731-103">封装图表点的格式属性。</span><span class="sxs-lookup"><span data-stu-id="54731-103">Encapsulates the format properties chart point.</span></span>
+      封装图表点的格式属性。
 
-      <span data-ttu-id="54731-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="54731-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
