--- a/docs/docs-ref-autogen/onenote/onenote/onenote.paragraphtype.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.paragraphtype.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'onenote!OneNote.ParagraphType:enum'
-    summary: '<span data-ttu-id="83b7a-101">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83b7a-101">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]'
     name: OneNote.ParagraphType
     fullName: OneNote.ParagraphType
     langs:
