commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.datapivothierarchydata.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.datapivothierarchydata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyData:interface'
-    summary: <span data-ttu-id="8847c-101">描述通过调用返回的数据的接口`dataPivotHierarchy.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="8847c-101">An interface describing the data returned by calling `dataPivotHierarchy.toJSON()`</span></span><!-- --><span data-ttu-id="8847c-102">.</span><span class="sxs-lookup"><span data-stu-id="8847c-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`dataPivotHierarchy.toJSON()`<!-- -->.
     name: Excel.Interfaces.DataPivotHierarchyData
     fullName: Excel.Interfaces.DataPivotHierarchyData
     langs:
