--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.conditionalrangebordercollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.conditionalrangebordercollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="a430b-101">一个用于更新 ConditionalRangeBorderCollection 对象上的数据的接口，可用于`conditionalRangeBorderCollection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="a430b-101">An interface for updating data on the ConditionalRangeBorderCollection object, for use in `conditionalRangeBorderCollection.set({ ... })`</span></span><!-- --><span data-ttu-id="a430b-102">.</span><span class="sxs-lookup"><span data-stu-id="a430b-102"></span></span>'
+    summary: '一个用于更新 ConditionalRangeBorderCollection 对象上的数据的接口，可用于`conditionalRangeBorderCollection.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData
     fullName: Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData
     langs:
