--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.functionresultdata.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.functionresultdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.FunctionResultData:interface'
-    summary: <span data-ttu-id="6f581-101">描述通过调用返回的数据的接口`functionResult.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="6f581-101">An interface describing the data returned by calling `functionResult.toJSON()`</span></span><!-- --><span data-ttu-id="6f581-102">.</span><span class="sxs-lookup"><span data-stu-id="6f581-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`functionResult.toJSON()`<!-- -->.
     name: Excel.Interfaces.FunctionResultData
     fullName: Excel.Interfaces.FunctionResultData
     langs:
@@ -16,9 +16,9 @@ items:
       - 'excel!Excel.Interfaces.FunctionResultData#value:member'
   - uid: 'excel!Excel.Interfaces.FunctionResultData#error:member'
     summary: |-
-      <span data-ttu-id="6f581-103">表示错误的错误值（\#如 "DIV/0"）。</span><span class="sxs-lookup"><span data-stu-id="6f581-103">Error value (such as "\#DIV/0") representing the error.</span></span> <span data-ttu-id="6f581-104">如果未设置错误字符串，则函数成功，并将其结果写入值字段。</span><span class="sxs-lookup"><span data-stu-id="6f581-104">If the error string is not set, then the function succeeded, and its result is written to the Value field.</span></span> <span data-ttu-id="6f581-105">该错误始终位于英语区域设置中。</span><span class="sxs-lookup"><span data-stu-id="6f581-105">The error is always in the English locale.</span></span>
+      表示错误的错误值（如 " \# DIV/0"）。 如果未设置错误字符串，则函数成功，并将其结果写入值字段。 该错误始终位于英语区域设置中。
 
-      <span data-ttu-id="6f581-106">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6f581-106">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: error
     fullName: error
     langs:
@@ -31,9 +31,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.FunctionResultData#value:member'
     summary: |-
-      <span data-ttu-id="6f581-107">函数计算的值。</span><span class="sxs-lookup"><span data-stu-id="6f581-107">The value of function evaluation.</span></span> <span data-ttu-id="6f581-108">仅当未发生错误（即，未设置 Error 属性）时，才会填充 "值" 字段。</span><span class="sxs-lookup"><span data-stu-id="6f581-108">The value field will be populated only if no error has occurred (i.e., the Error property is not set).</span></span>
+      函数计算的值。 仅当未发生错误（即，未设置 Error 属性）时，才会填充 "值" 字段。
 
-      <span data-ttu-id="6f581-109">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6f581-109">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
     fullName: value
     langs:
