--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.functionresultloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.functionresultloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.FunctionResultLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="4ec2c-101">包含函数求值操作的结果的对象</span><span class="sxs-lookup"><span data-stu-id="4ec2c-101">An object containing the result of a function-evaluation operation</span></span>
+      包含函数求值操作的结果的对象
 
-      <span data-ttu-id="4ec2c-102">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4ec2c-102">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.FunctionResultLoadOptions
     fullName: Excel.Interfaces.FunctionResultLoadOptions
     langs:
@@ -16,7 +16,7 @@ items:
       - 'excel!Excel.Interfaces.FunctionResultLoadOptions#error:member'
       - 'excel!Excel.Interfaces.FunctionResultLoadOptions#value:member'
   - uid: 'excel!Excel.Interfaces.FunctionResultLoadOptions#$all:member'
-    summary: '<span data-ttu-id="4ec2c-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="4ec2c-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="4ec2c-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="4ec2c-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="4ec2c-105">).</span><span class="sxs-lookup"><span data-stu-id="4ec2c-105"></span></span>'
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
@@ -29,9 +29,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.FunctionResultLoadOptions#error:member'
     summary: |-
-      <span data-ttu-id="4ec2c-106">表示错误的错误值（\#如 "DIV/0"）。</span><span class="sxs-lookup"><span data-stu-id="4ec2c-106">Error value (such as "\#DIV/0") representing the error.</span></span> <span data-ttu-id="4ec2c-107">如果未设置错误字符串，则函数成功，并将其结果写入值字段。</span><span class="sxs-lookup"><span data-stu-id="4ec2c-107">If the error string is not set, then the function succeeded, and its result is written to the Value field.</span></span> <span data-ttu-id="4ec2c-108">该错误始终位于英语区域设置中。</span><span class="sxs-lookup"><span data-stu-id="4ec2c-108">The error is always in the English locale.</span></span>
+      表示错误的错误值（如 " \# DIV/0"）。 如果未设置错误字符串，则函数成功，并将其结果写入值字段。 该错误始终位于英语区域设置中。
 
-      <span data-ttu-id="4ec2c-109">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4ec2c-109">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: error
     fullName: error
     langs:
@@ -44,9 +44,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.FunctionResultLoadOptions#value:member'
     summary: |-
-      <span data-ttu-id="4ec2c-110">函数计算的值。</span><span class="sxs-lookup"><span data-stu-id="4ec2c-110">The value of function evaluation.</span></span> <span data-ttu-id="4ec2c-111">仅当未发生错误（即，未设置 Error 属性）时，才会填充 "值" 字段。</span><span class="sxs-lookup"><span data-stu-id="4ec2c-111">The value field will be populated only if no error has occurred (i.e., the Error property is not set).</span></span>
+      函数计算的值。 仅当未发生错误（即，未设置 Error 属性）时，才会填充 "值" 字段。
 
-      <span data-ttu-id="4ec2c-112">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4ec2c-112">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
     fullName: value
     langs:
