--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.iconsetconditionalformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.iconsetconditionalformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.IconSetConditionalFormatUpdateData:interface'
-    summary: '<span data-ttu-id="85223-101">一个用于更新 IconSetConditionalFormat 对象上的数据的接口，可用于`iconSetConditionalFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="85223-101">An interface for updating data on the IconSetConditionalFormat object, for use in `iconSetConditionalFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="85223-102">.</span><span class="sxs-lookup"><span data-stu-id="85223-102"></span></span>'
+    summary: '一个用于更新 IconSetConditionalFormat 对象上的数据的接口，可用于`iconSetConditionalFormat.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.IconSetConditionalFormatUpdateData
     fullName: Excel.Interfaces.IconSetConditionalFormatUpdateData
     langs:
