commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.rowcolumnpivothierarchycollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.rowcolumnpivothierarchycollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RowColumnPivotHierarchyCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="3fc16-101">一个用于更新 RowColumnPivotHierarchyCollection 对象上的数据的接口，可用于`rowColumnPivotHierarchyCollection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="3fc16-101">An interface for updating data on the RowColumnPivotHierarchyCollection object, for use in `rowColumnPivotHierarchyCollection.set({ ... })`</span></span><!-- --><span data-ttu-id="3fc16-102">.</span><span class="sxs-lookup"><span data-stu-id="3fc16-102"></span></span>'
+    summary: '一个用于更新 RowColumnPivotHierarchyCollection 对象上的数据的接口，可用于`rowColumnPivotHierarchyCollection.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.RowColumnPivotHierarchyCollectionUpdateData
     fullName: Excel.Interfaces.RowColumnPivotHierarchyCollectionUpdateData
     langs:
