--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.runtimeupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.runtimeupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RuntimeUpdateData:interface'
-    summary: '<span data-ttu-id="b73ba-101">一个用于更新运行时对象上的数据的接口，可用于`runtime.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="b73ba-101">An interface for updating data on the Runtime object, for use in `runtime.set({ ... })`</span></span><!-- --><span data-ttu-id="b73ba-102">.</span><span class="sxs-lookup"><span data-stu-id="b73ba-102"></span></span>'
+    summary: '一个用于更新运行时对象上的数据的接口，可用于`runtime.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.RuntimeUpdateData
     fullName: Excel.Interfaces.RuntimeUpdateData
     langs:
