--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.shapefilldata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.shapefilldata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ShapeFillData:interface'
-    summary: <span data-ttu-id="2a7f4-101">描述通过调用返回的数据的接口`shapeFill.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="2a7f4-101">An interface describing the data returned by calling `shapeFill.toJSON()`</span></span><!-- --><span data-ttu-id="2a7f4-102">.</span><span class="sxs-lookup"><span data-stu-id="2a7f4-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`shapeFill.toJSON()`<!-- -->.
     name: Excel.Interfaces.ShapeFillData
     fullName: Excel.Interfaces.ShapeFillData
     langs:
